--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -55,7 +55,8 @@ font-1 = "feather:size=10;3"
 ; modules-left = launcher xworkspaces spotify spotify-control spotify-next
 modules-left = launcher xworkspaces
 ; modules-center = xwindow
-modules-center = spotify-previous spotify-control spotify-next
+; modules-center = spotify-previous spotify-control spotify-next
+modules-center = player-prev player player-next
 modules-right = pulseaudio backlight battery wireless-network date sysmenu
 
 cursor-click = pointer
@@ -355,5 +356,21 @@ label-foreground = ${colors.foreground}
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
+
+[module/player]
+type = custom/script
+exec = ~/.scripts/polybar_playerctl.sh
+click-left = playerctl play-pause
+interval = 0.5
+
+[module/player-next]
+type = custom/script
+exec = echo ""
+click-left = playerctl next
+
+[module/player-prev]
+type = custom/script
+exec = echo ""
+click-left = playerctl previous
 
 ; vim:ft=dosini
