--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,10 +26,10 @@ disabled = #707880
 [bar/example]
 width = 60%
 ; height = 10pt
-radius = 3pt
+radius = 5pt
 monitor = ${env:MONITOR:}
 offset-x = 20%
-offset-y = 5pt
+offset-y = 10pt
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -68,7 +68,8 @@ enable-ipc = true
 ; wm-restack = bspwm
 ; wm-restack = i3
 
-; override-redirect = true
+override-redirect = false
+
 [module/launcher]
 type = custom/text
 
@@ -97,12 +98,12 @@ click-left = ~/.config/rofi/powermenu/type-5/powermenu.sh
 type = internal/battery
 
 ; This is useful in case the battery never reports 100% charge
-full-at = 98
+; full-at = 98
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
-battery = BAT1
-adapter = ACAD
+battery = BAT0
+adapter = ADP0
 
 ; If an inotify event haven't been reported in this many
 ; seconds, manually poll for new values.
@@ -219,7 +220,7 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <ramp-volume><ramp-headphones>
+format-volume = <ramp-volume><label-volume>
 
 # format-volume = <ramp-volume><label-volume>
 # format-volume-overline = ${colors.background}
@@ -228,7 +229,7 @@ format-volume = <ramp-volume><ramp-headphones>
 format-muted = <label-muted>
 format-muted-prefix = 󰝟
 format-muted-prefix-background = ${colors.background}
-format-muted-prefix-padding = 1
+format-muted-prefix-padding = 0
 # label-muted = ""
 # label-muted-padding = 1
 # format-muted-overline = ${colors.background}
@@ -252,7 +253,7 @@ ramp-volume-0 = 󰕿
 ramp-volume-1 = 󰖀
 ramp-volume-2 = 󰕾
 ramp-volume-background = ${colors.background}
-ramp-volume-padding = 1
+ramp-volume-padding = 0
 
 ; If defined, it will replace <ramp-volume> when
 ; headphones are plugged in to `headphone_control_numid`
@@ -332,7 +333,7 @@ ramp-signal-1 = 󰤟
 ramp-signal-2 = 󰤢
 ramp-signal-3 = 󰤥
 ramp-signal-4 = 󰤨
-ramp-signal-foreground = ${colors.white}
+; ramp-signal-foreground = ${colors.white}
 
 [network-base]
 type = internal/network
@@ -368,9 +369,9 @@ pseudo-transparency = true
 
 [module/player]
 type = custom/script
-exec = ~/.scripts/polybar_playerctl.sh
-click-left = playerctl play-pause
-interval = 0.5
+exec = bash polybar_playerctl
+click-left = playerctl play-pause &
+interval = 1
 
 [module/player-next]
 type = custom/script
