--- a/picom.conf
+++ b/picom.conf
@@ -1,33 +1,114 @@
-inactive-opacity = 0.90;
-active-opacity = 0.90;
+#experimental-backends = true
+# backend = "xr_glx_hybrid"
+backend = "glx"
+# backend = "xrender"
+vsync = true
 
-opacity-rule= [
-    "100:class_g='Alacritty'",
-    "90:class_g='Ferdium'",
-    "100:class_g='Rofi'"
+# Experiments
+animations = true
+animations-for-open-window = true
+animation-dampening = 25
+animation-stiffness = 300
+animation-clamping = true
+
+# https://nuxsh.is-a.dev/blog/picom.html
+animation-for-open-window = "zoom"
+animation-for-transient-window = "slide-right"
+# (requires pijulius)
+animation-for-menu-window = "slide-down"
+animation-for-workspace-switch-in = "slide-left"
+animation-for-workspace-switch-out = "slide-right"
+
+# FT-Labs
+animations = true
+animation-stiffness-in-tag = 300.0
+animation-stiffness-tag-change = 90.0;
+animation-for-open-window = "slide-up"
+animation-for-unmap-window = "squeeze-bottom" # Weirdly this makes switching workspaces look nice
+animation-for-transient-window = "none" #popup windows
+
+# animation-for-prev-tag = "slide-down";
+# enable-fading-prev-tag = true;
+# animation-for-next-tag = "slide-in-center";
+# enable-fading-next-tag = true;
+wintypes: {
+	tooltip = {
+		animation = "none";
+	};
+};
+# wintypes: { tooltip = { animation = "none" } }
+#
+# wintypes:
+# {
+# 	tooltip = { animation = "slide-right" }
+# 	menu = { animation = "none" }
+# 	utility = { animation = "slide-right" }
+# 	dialog = { animation = "slide-right" }
+# 	rofi = { animation = "slide-right" }
+# };V
+
+# Opacity
+# inactive-opacity = 0.8
+# active-opacity = 0.95
+opacity-rule = [
+	"100:class_g= 'discord'",
+	"50:class_g= 'feh'",
+  "100:class_g= 'rofi'",
+  "100:class_g= 'alacritty'",
+  "90:class_g= 'neovide'"
 ]
-
-
-
-frame-opacity = 1;
-blur-method = "dual_kawase";
-blur-strength = 6;
 
 # Fading
-fading = true
-fade-in-step = 0.2
-fade-out-step = 0.2
+fading = true;
+fade-in-step = 0.1
+fade-out-step = 0.1
+
+# Blur
+blur-method = "dual_kawase"
+blur-strength = 6
+blur-background-exclude = [
+#	#"window_type = 'notification'",
+#	"window_type = 'tooltip'",
+#	"window_type = 'menu'",
+	"class_g = 'slop'",
+	"class_i = 'discover-overlay'",
+	"class_g = 'feh'",
+	"class_g = 'touchegg'"
+]
 
 # Shadow
-shadow = true
-shadow-exclude = [
-    "!focused"
-]
-# shadow-color = "#"
-shadow-opacity = 1
-shadow-radius = 20
-shadow-offset-x = -18
-shadow-offset-y = -20
+shadow = true;
+shadow-offset-x = -12
+shadow-offset-y = -10
+shadow-radius = 12
+shadow-opacity = 12
 
-# Rounded
-corner-radius = 3
+# Rounding
+corner-radius = 5
+rounded-corners-exclude = [
+	"class_g = 'dmenu'",
+	"window_type = 'tooltip'",
+	"window_type = 'menu'",
+	"window_type = 'notification'",
+  "class_g = 'polybar'"
+	# "window_type = 'dock'",
+]
+
+##--Random stuff--##
+
+# Performance Improvments:
+glx-no-stencil = true
+xrender-sync-fence = true
+
+# Crashes X server sometimes when going fullscreen
+#unredir-if-possible = true;
+
+# Some borrowed stuff
+#mark-wmwin-focused = true
+#mark-ovredir-focused = false
+#detect-rounded-corners = true
+#detect-client-opacity = true
+#refresh-rate = 0
+#detect-transient = true
+#detect-client-leader = true
+#use-damage = true
