--- a/picom.conf
+++ b/picom.conf
@@ -48,14 +48,14 @@ wintypes: {
 # };V
 
 # Opacity
-# inactive-opacity = 0.8
-# active-opacity = 0.95
+inactive-opacity = 0.9
+active-opacity = 0.9
 opacity-rule = [
 	"100:class_g= 'discord'",
-	"50:class_g= 'feh'",
   "100:class_g= 'rofi'",
   "100:class_g= 'alacritty'",
-  "90:class_g= 'neovide'"
+  "85:class_g= 'neovide'",
+  "100:class_g= 'firefox'",
 ]
 
 # Fading
@@ -90,7 +90,8 @@ rounded-corners-exclude = [
 	"window_type = 'tooltip'",
 	"window_type = 'menu'",
 	"window_type = 'notification'",
-  "class_g = 'polybar'"
+  "class_g = 'polybar'",
+  "class_g = 'rofi'"
 	# "window_type = 'dock'",
 ]
 
