--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -55,7 +55,7 @@ modules-left = xworkspaces
 ; modules-center = xwindow
 ; modules-center = spotify-previous spotify-control spotify-next
 modules-center = player-prev player player-next
-modules-right = pulseaudio battery wireless-network date 
+modules-right = pipewire battery wireless-network date 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -370,8 +370,7 @@ pseudo-transparency = true
 [module/player]
 type = custom/script
 exec = bash polybar_playerctl
-click-left = playerctl play-pause &
-interval = 1
+click-left = playerctl play-pause
 
 [module/player-next]
 type = custom/script
@@ -382,5 +381,5 @@ click-left = playerctl next
 type = custom/script
 exec = echo 󰒮
 click-left = playerctl previous
-
+;
 ; vim:ft=dosini
