--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -8,3 +8,5 @@ gesture swipe left 3 bspc desktop next --focus
 gesture swipe right 3 bspc desktop prev --focus
 gesture swipe up 3 xdotool key super+r
 gesture swipe down 3 xdotool key super+r
+gesture swipe down 4 bspc node -c
+tap 4 playerctl play-pause
