--- a/touchegg/touchegg.conf
+++ b/touchegg/touchegg.conf
@@ -26,9 +26,9 @@
         <on>begin</on>
       </action>
     </gesture>
-    <gesture type="TAP" fingers="2" direction="UNKNOWN">
+    <gesture type="TAP" fingers="1" direction="UNKNOWN">
       <action type="MOUSE_CLICK">
-        <button>3</button>
+        <button>1</button>
         <on>begin</on>
       </action>
     </gesture>
@@ -64,19 +64,11 @@
         <on>end</on>
       </action>
     </gesture>
-    <gesture type="TAP" fingers="4" direction="UNKNOWN">
-      <action type="RUN_COMMAND">
-        <command></command>
-        <repeat>false</repeat>
-        <animation>NONE</animation>
-        <on>begin</on>
-      </action>
+    <gesture type="SWIPE" fingers="4" direction="DOWN">
+      <action type="CLOSE_WINDOW"></action>
     </gesture>
-    <gesture type="TAP" fingers="3" direction="UNKNOWN">
-      <action type="MOUSE_CLICK">
-        <button>2</button>
-        <on>begin</on>
-      </action>
+    <gesture type="SWIPE" fingers="4" direction="UP">
+      <action type="FULLSCREEN_WINDOW"></action>
     </gesture>
   </application>
 </touchégg>
