--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -15,13 +15,16 @@
 ;   The README contains a lot of information
 ;
 ;==========================================================
+
 [colors]
-background = #282A2E11
-foreground = #C5C8C6
-primary = #7B84FE
-secondary = #7A44BE33
-alert = #DC5050
-disabled = #707880
+wm-restack = bspwm
+autohide = true
+background = ${xrdb:color0:#000000}
+foreground = ${xrdb:color7:#ffffff}
+primary    = ${xrdb:color1:#ff5555}
+secondary  = ${xrdb:color2:#50fa7b}
+accent     = ${xrdb:color3:#f1fa8c}
+
 
 [bar/example]
 width = 60%
@@ -55,7 +58,7 @@ modules-left = xworkspaces
 ; modules-center = xwindow
 ; modules-center = spotify-previous spotify-control spotify-next
 modules-center = player-prev player player-next
-modules-right = pipewire battery wireless-network date 
+modules-right = pipewire battery wireless-network date sysmenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -85,14 +88,12 @@ click-left = bash ~/.config/rofi/custom/menu.sh
 [module/sysmenu]
 type = custom/text
 
-content-prefix = 
+content-prefix = ""
 content-prefix-padding = 1
 
 content = " "
 
-click-left = ~/.config/rofi/powermenu/type-5/powermenu.sh
-
-
+click-left = ~/.config/rofi/powermenu/type-4/powermenu.sh
 
 [module/battery]
 type = internal/battery
@@ -369,7 +370,7 @@ pseudo-transparency = true
 
 [module/player]
 type = custom/script
-exec = bash polybar_playerctl
+exec = echo $(playerctl status | awk '{if($1=="Playing") print "󰏤"; else if($1=="Paused") print "󰐊"; else if($1=="Stopped") print "󰓛"; else print "Unknown"}')
 click-left = playerctl play-pause
 
 [module/player-next]
