--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,6 +16,8 @@
 ;
 ;==========================================================
 
+; include-file = $HOME/.cache/wal/polybar.ini
+;
 [colors]
 wm-restack = bspwm
 autohide = true
@@ -25,13 +27,34 @@ primary    = ${xrdb:color1:#ff5555}
 secondary  = ${xrdb:color2:#50fa7b}
 accent     = ${xrdb:color3:#f1fa8c}
 
+; [bar/workspaces_bar]
+; width = 7%
+; radius = 5pt;
+; monitor = ${env:MONITOR:}
+; offset-x = 0.5%
+; offset-y = 10pt
+;
+; background = ${colors.background}
+; foreground = ${colors.foreground}
+; line-size = 3pt
+; border-size = 1pt
+; border-color = ${colors.foreground}
+; padding-left = 1
+; padding-right = 1
+; module-margin = 1
+; separator = 
+; separator-foreground = ${colors.disabled}
+; font-0 = "JetBrainsMono Nerd Font:size=8;3"
+;
+; modules-center = xworkspaces
+;
 
 [bar/example]
-width = 60%
+width = 99%
 ; height = 10pt
 radius = 5pt
 monitor = ${env:MONITOR:}
-offset-x = 20%
+offset-x = 0.5%
 offset-y = 10pt
 
 background = ${colors.background}
