--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -52,7 +52,7 @@ accent     = ${xrdb:color3:#f1fa8c}
 [bar/example]
 width = 99%
 ; height = 10pt
-radius = 5pt
+; radius = 5pt
 monitor = ${env:MONITOR:}
 offset-x = 0.5%
 offset-y = 10pt
