Update: zip and unzip keybinds to ranger

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -498,6 +498,8 @@ map p'<any> paste dest=%any_path
 
 map dD console delete
 map dT console trash
+map Z shell mkdir zipFolder && cp %s ./zipFolder && zip -r zippedFiles ./zipFolder && rm -rf ./zipFolder
+map zZ shell mkdir zipFolder && cp %s ./zipFolder && cd ./zipFolder && unzip ./%s
 
 # map dd cut
 map dd shell mv %s /home/ghost/.local/Trash/
