--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,43 +27,22 @@ primary    = ${xrdb:color1:#ff5555}
 secondary  = ${xrdb:color2:#50fa7b}
 accent     = ${xrdb:color3:#f1fa8c}
 
-; [bar/workspaces_bar]
-; width = 7%
-; radius = 5pt;
-; monitor = ${env:MONITOR:}
-; offset-x = 0.5%
-; offset-y = 10pt
-;
-; background = ${colors.background}
-; foreground = ${colors.foreground}
-; line-size = 3pt
-; border-size = 1pt
-; border-color = ${colors.foreground}
-; padding-left = 1
-; padding-right = 1
-; module-margin = 1
-; separator = 
-; separator-foreground = ${colors.disabled}
-; font-0 = "JetBrainsMono Nerd Font:size=8;3"
-;
-; modules-center = xworkspaces
-;
 
 [bar/example]
-width = 99%
+width = 100%
 ; height = 10pt
 ; radius = 5pt
 monitor = ${env:MONITOR:}
-offset-x = 0.5%
-offset-y = 10pt
+offset-x = 0%
+offset-y = 0pt
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 1pt
-border-color = ${colors.foreground}
+border-bottom-size = 1pt
+border-bottom-color = ${colors.foreground}
 
 padding-left = 1
 padding-right = 1
@@ -94,7 +73,7 @@ enable-ipc = true
 ; wm-restack = bspwm
 ; wm-restack = i3
 
-override-redirect = false
+override-redirect = true
 
 [module/launcher]
 type = custom/text
@@ -405,5 +384,11 @@ click-left = playerctl next
 type = custom/script
 exec = echo 󰒮
 click-left = playerctl previous
+
+[module/reload-driver]
+type = custom/script
+exec = modpr
+click-left = modprobe atkbd
+
 ;
 ; vim:ft=dosini
