--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -498,7 +498,7 @@ map p'<any> paste dest=%any_path
 
 map dD console delete
 map dT console trash
-map Z shell mkdir zipFolder && cp %s ./zipFolder && zip -r zippedFiles ./zipFolder && rm -rf ./zipFolder
+map Z shell mkdir zipFolder && cp %s -r ./zipFolder && zip -r zippedFiles ./zipFolder && rm -rf ./zipFolder
 map zZ shell mkdir zipFolder && cp %s ./zipFolder && cd ./zipFolder && unzip ./%s
 
 # map dd cut
