--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -41,7 +41,7 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-bottom-size = 1pt
+border-bottom-size = 2pt
 border-bottom-color = ${colors.foreground}
 
 padding-left = 1
@@ -73,7 +73,7 @@ enable-ipc = true
 ; wm-restack = bspwm
 ; wm-restack = i3
 
-override-redirect = true
+override-redirect = false
 
 [module/launcher]
 type = custom/text
