--- a/touchegg/touchegg.conf
+++ b/touchegg/touchegg.conf
@@ -32,11 +32,51 @@
         <on>begin</on>
       </action>
     </gesture>
+    <gesture type="SWIPE" fingers="4" direction="DOWN">
+      <action type="RUN_COMMAND">
+        <command>xdotool key super+o</command>
+        <repeat>false</repeat>
+        <animation>NONE</animation>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="LEFT">
+      <action type="RUN_COMMAND">
+        <command>xdotool key super+y</command>
+        <repeat>false</repeat>
+        <animation>NONE</animation>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="RIGHT">
+      <action type="RUN_COMMAND">
+        <command>xdotool key super+y</command>
+        <repeat>false</repeat>
+        <animation>NONE</animation>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="4" direction="UP">
+      <action type="RUN_COMMAND">
+        <command>xdotool key super+o</command>
+        <repeat>false</repeat>
+        <animation>NONE</animation>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="SWIPE" fingers="3" direction="UP">
+      <action type="RUN_COMMAND">
+        <command>xdotool key super+r</command>
+        <repeat>false</repeat>
+        <animation>NONE</animation>
+        <on>end</on>
+      </action>
+    </gesture>
     <gesture type="SWIPE" fingers="3" direction="DOWN">
       <action type="RUN_COMMAND">
         <command>xdotool key super+r</command>
         <repeat>false</repeat>
-        <animation>CHANGE_DESKTOP_DOWN</animation>
+        <animation>NONE</animation>
         <on>end</on>
       </action>
     </gesture>
@@ -44,7 +84,7 @@
       <action type="RUN_COMMAND">
         <command>bspc desktop next --focus</command>
         <repeat>false</repeat>
-        <animation>CHANGE_DESKTOP_RIGHT</animation>
+        <animation>NONE</animation>
         <on>end</on>
       </action>
     </gesture>
@@ -52,21 +92,7 @@
       <action type="RUN_COMMAND">
         <command>bspc desktop prev --focus</command>
         <repeat>false</repeat>
-        <animation>CHANGE_DESKTOP_LEFT</animation>
-        <on>end</on>
-      </action>
-    </gesture>
-    <gesture type="SWIPE" fingers="4" direction="DOWN">
-      <action type="CLOSE_WINDOW"></action>
-    </gesture>
-    <gesture type="SWIPE" fingers="4" direction="UP">
-      <action type="FULLSCREEN_WINDOW"></action>
-    </gesture>
-    <gesture type="SWIPE" fingers="3" direction="UP">
-      <action type="RUN_COMMAND">
-        <command>xdotool key super+r</command>
-        <repeat>false</repeat>
-        <animation>CHANGE_DESKTOP_UP</animation>
+        <animation>NONE</animation>
         <on>end</on>
       </action>
     </gesture>
