--- a/touchegg/touchegg.conf
+++ b/touchegg/touchegg.conf
@@ -13,19 +13,6 @@
         <borderColor>F84A53</borderColor>
       </action>
     </gesture>
-    <gesture type="PINCH" fingers="4" direction="OUT">
-      <action type="SHOW_DESKTOP">
-        <animate>true</animate>
-      </action>
-    </gesture>
-    <gesture type="PINCH" fingers="4" direction="IN">
-      <action type="SEND_KEYS">
-        <repeat>false</repeat>
-        <modifiers>Super_L</modifiers>
-        <keys>A</keys>
-        <on>begin</on>
-      </action>
-    </gesture>
     <gesture type="TAP" fingers="1" direction="UNKNOWN">
       <action type="MOUSE_CLICK">
         <button>1</button>
@@ -95,6 +82,9 @@
         <animation>NONE</animation>
         <on>end</on>
       </action>
+    </gesture>
+    <gesture type="PINCH" fingers="3" direction="OUT">
+      <action type="FULLSCREEN_WINDOW"></action>
     </gesture>
   </application>
 </touchégg>
