chore: modify opacity

--- a/picom.conf
+++ b/picom.conf
@@ -48,14 +48,14 @@ wintypes: {
 # };V
 
 # Opacity
-inactive-opacity = 0.9
+inactive-opacity = 0.8
 active-opacity = 0.9
 opacity-rule = [
 	"100:class_g= 'discord'",
   "100:class_g= 'rofi'",
   "100:class_g= 'alacritty'",
-  "85:class_g= 'neovide'",
-  "100:class_g= 'firefox'",
+  # "85:class_g= 'neovide'",
+  # "90:class_g= 'firefox'",
 ]
 
 # Fading
