--- a/touchegg/touchegg.conf
+++ b/touchegg/touchegg.conf
@@ -86,5 +86,23 @@
     <gesture type="PINCH" fingers="3" direction="OUT">
       <action type="FULLSCREEN_WINDOW"></action>
     </gesture>
+    <gesture type="PINCH" fingers="2" direction="IN">
+      <action type="SEND_KEYS">
+        <modifiers>Control_L</modifiers>
+        <keys>minus</keys>
+        <repeat>false</repeat>
+        <animation>NONE</animation>
+        <on>begin</on>
+      </action>
+    </gesture>
+    <gesture type="PINCH" fingers="2" direction="OUT">
+      <action type="SEND_KEYS">
+        <modifiers>Control_L</modifiers>
+        <keys>equal</keys>
+        <repeat>false</repeat>
+        <animation>NONE</animation>
+        <on>begin</on>
+      </action>
+    </gesture>
   </application>
 </touchégg>
