--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -60,7 +60,7 @@ modules-left = xworkspaces
 ; modules-center = xwindow
 ; modules-center = spotify-previous spotify-control spotify-next
 modules-center = player-prev player player-next
-modules-right = pipewire battery wireless-network date sysmenu
+modules-right = pulseaudio battery wireless-network date sysmenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
