chore: convert to pdf

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -767,3 +767,7 @@ copytmap <ESC> q Q w <C-c>
 
 map yc shell xclip -selection clipboard -t image/png -i %s
 map <A-a> shell bash -c 'read -p "Enter folder name: " folder_name && mkdir -p "$PWD/$folder_name" && cd "$PWD/$folder_name"'
+
+
+# Convert file to pdf
+map cp shell libreoffice --headless --convert-to pdf %f .
