--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -60,7 +60,7 @@ modules-left = xworkspaces
 ; modules-center = xwindow
 ; modules-center = spotify-previous spotify-control spotify-next
 modules-center = player-prev player player-next
-modules-right = pulseaudio battery wireless-network date sysmenu
+modules-right = pulseaudio battery wireless-network bluetooth date sysmenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -318,6 +318,7 @@ format-disconnected-prefix-padding = 1
 
 [module/wireless-network]
 type = internal/network
+click-left = iwgtk &
 interface = wlan0
 interval = 1
 unknown-as-up = true
@@ -390,5 +391,11 @@ type = custom/script
 exec = modpr
 click-left = modprobe atkbd
 
-;
+[module/bluetooth]
+type = custom/script
+exec = polybar_bluetooth
+tail = true
+click-left = polybar_bluetooth --toggle &
+
+
 ; vim:ft=dosini
