feat(ranger): add file conversions

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -379,6 +379,7 @@ map cd console cd%space
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
 
 # Change the line mode
+default_linemode devicons2
 map Mf linemode filename
 map Mi linemode fileinfo
 map Mm linemode mtime
@@ -770,4 +771,5 @@ map <A-a> shell bash -c 'read -p "Enter folder name: " folder_name && mkdir -p "
 
 
 # Convert file to pdf
-map cp shell libreoffice --headless --convert-to pdf %f .
+map cpp shell libreoffice --headless --convert-to pdf %f .
+map cip shell magick %s converted.pdf
