update zip/unzip commands ranger

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -499,8 +499,6 @@ map p'<any> paste dest=%any_path
 
 map dD console delete
 map dT console trash
-map Z shell mkdir zipFolder && cp %s -r ./zipFolder && zip -r zippedFiles ./zipFolder && rm -rf ./zipFolder
-map zZ shell mkdir zipFolder && cp %s ./zipFolder && cd ./zipFolder && unzip ./%s
 
 # map dd cut
 map dd shell mv %s /home/ghost/.local/Trash/
@@ -767,9 +765,17 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 map yc shell xclip -selection clipboard -t image/png -i %s
-map <A-a> shell bash -c 'read -p "Enter folder name: " folder_name && mkdir -p "$PWD/$folder_name" && cd "$PWD/$folder_name"'
 
 
 # Convert file to pdf
-map cpp shell libreoffice --headless --convert-to pdf %f .
+map cpp shell libreoffice --headless --convert-to pdf %s .
 map cip shell magick %s converted.pdf
+map <C-d> shell dragon-drop -a -x %p
+
+# Zip and Unzip
+# map Zf shell mkdir zipFolder && cp %s -r ./zipFolder && zip -r zippedFiles ./zipFolder && rm -rf ./zipFolder
+# map Zu shell mkdir zipFolder && cp %s ./zipFolder && cd ./zipFolder && unzip ./%s
+
+# Open the console with "zip " prefilled, mkcd-style; you type the name, press Enter.
+map cz console zip
+map uz unzip
