--- a/nvim/.gitignore
+++ b/nvim/.gitignore
@@ -1,8 +1,8 @@
-spell
-ftplugin
-syntax
-coc-settings.json
-.luarc.json
-lazy-lock.json
-after
-**/.DS_Store
+tt.*
+.tests
+doc/tags
+debug
+.repro
+foo.*
+*.log
+data
