--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 obsidian
+Android Open Source Project
+Arduino IDE
+Electron
+Google
+LM Studio
+Meltytech
+MongoDB Compass
+Postman
+Slack
+asciinema
+audacity
+chromium
+create-next-app-nodejs
+configstore
+pulse
+vlc
+tmux/plugins/tpm
+tartube
+wireshark
