--- a/picom.conf
+++ b/picom.conf
@@ -55,7 +55,7 @@ opacity-rule = [
   "100:class_g= 'rofi'",
   "80:class_g= 'alacritty'",
   "90:class_g= 'neovide'",
-  "100:class_g= 'firefox'",
+  "95:class_g= 'zen'",
 ]
 
 # Fading
