add power monitoring to polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -60,7 +60,7 @@ modules-left = xworkspaces
 ; modules-center = xwindow
 ; modules-center = spotify-previous spotify-control spotify-next
 modules-center = player-prev player player-next
-modules-right = pulseaudio battery wireless-network bluetooth date sysmenu
+modules-right = pulseaudio battery power-monitor wireless-network bluetooth date sysmenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -397,5 +397,10 @@ exec = polybar_bluetooth
 tail = true
 click-left = polybar_bluetooth --toggle &
 
+
+[module/power-monitor]
+type = custom/script
+exec = awk '{printf "%.2f W\n", $1/1e6}' /sys/class/power_supply/BAT0/power_now && sleep 5
+tail = true
 
 ; vim:ft=dosini
